# minide

./: '  .clang-format  .gitignore  .tmux.conf  1  CMakeLists.txt  README.md  flake.nix  meson.build  renderdoc_opts.cap  taskell.md
assets/: assets
include/minide/: app.h  file_interface.h  file_manager.h  font.h  font_manager.h  fontconfig.h  fps_counter.h  general_alloc.h  gl_wrapper.h  glyph_cache.h  input.h  logger.h  path.h  retcodes.h  shaders_util.h  shaper.h  text_renderer.h  texture_lender.h  u8string.h
include/minide/buffers/: meta.h  node.h
include/minide/debug/: border.h
include/minide/helpers/: icu_checker.h
include/minide/types/: avl_tree.h  circular_buffer.h  hash_table.h  hocis_vector.h  pair.h  path.h  stack.h  u8string.h  vector.h
include/minide/ui/: view.h
include/minide/ui/buffers/: meta.h  node.h
scripts/: clang_format_all.sh  debug.sh  debug_this.sh  dev  perf_this.sh  prep_directory.sh  profile_this.sh  release.sh  test.sh
src/: app.c  aristotle.h  emoji_cache.c  emoji_cache.h  file_interface.c  file_manager.c  font.c  font.h  font_manager.c  font_manager.h  fontconfig.c  fontconfig.h  fonts.c  fonts.h  fps_counter.c  fps_counter.h  general_alloc.c  gl_wrapper.c  gl_wrapper.h  glyph_atlas.c  glyph_atlas.h  glyph_cache.c  glyph_cache.h  input.c  logger.c  logger.h  main.c  path.c  path.cpp  path.h  retcodes.c  rsvg-port.c  rsvg-port.h  shaders_util.c  shaders_util.h  shaper.c  shaper.h  text_renderer.c  text_renderer.h  texture_lender.c  (+3 more)
src/buffers/: meta.c  node.c
src/debug/: border.c
src/glsl/: text.f.glsl  text.v.glsl
src/glsl/debug/: border.f.glsl  border.v.glsl
src/types/: avl_tree.c  circular_buffer.c  circular_buffer.h  fonts.h  hash_table.c  hash_table.h  hocis_vector.c  pair.h  path.c  path.h  simple.h  stack.c  u8string.c  u8string.h  vector.c  vector.h
src/ui/buffers/: meta.c  node.c
subprojects/: cglm.wrap  harfbuzz.wrap
tests/: CMakeLists.txt  buffer_view.c  fontconfig.c  glyph_cache.c  hash_table_get.c  hash_table_insert_collision.c  hash_table_insert_unifont.c  input.c  path.c  path_expand.c  text_renderer.c  text_renderer_emoji.c  u8str_clen.c  u8str_dec.c  u8str_from_code_point.c  u8str_get_bytes_needed_for.c  u8str_get_wbyte_seq.c  u8str_inc.c  u8str_is_utf8_valid.c  unicode_emoji.c
